beta version upd

--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
- <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Readex+Pro:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Readex+Pro:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
     <aside class="popup-total">
       <div class="popup-total__body">
         <h3 class="popup-total__title">К сожалению вы проиграли</h3>
-        <p class="popup-total__result">Ваш счет: <span class="popup-total__result-text"></span></p>
-        <button class="popup-total__btn">
-          Начать заново
-        </button>
+        <p class="popup-total__result">
+          Ваш счет: <span class="popup-total__result-text"></span>
+        </p>
+        <button class="popup-total__btn">Начать заново</button>
       </div>
     </aside>
 
